# esp_idf_ble_error_report

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  esp32_bridge.c  esp32_bridge.h  gatts_table_creat_demo.c  gatts_table_creat_demo.h  main.c
main/air_ref/: air_ref.c  air_ref.h  error.h  general.h  infineonlib.h  logger.c  logger.h  serial_logger.c  serial_logger.h  utils.c  validator_field.h
main/air_ref/serial_logger/: logger_air_ref.c  logger_air_ref.h  logger_frame.c  logger_frame.h  logger_hw.h  (+1 more)
main/airref_flatbuffer/: airref.fbs  airref_builder.h  airref_reader.h  airref_verifier.h  bluefi.fbs  bluefi_builder.h  bluefi_reader.h  bluefi_verifier.h  logger.fbs  logger_builder.h  logger_reader.h  logger_verifier.h
main/ble/: ble.c  ble.h  ble_lib.c  blufi.c  blufi.h  blufi_init.c  blufi_security.c  gatt_ar_conf.c  gatt_ar_state.c  gatt_bluefi.c  gatt_m_state.c  gatts_table_creat_demo.h  task_notifier.c
main/fb/: Makefile  airref.fbs  airref_builder.h  airref_reader.h  airref_verifier.h  monster.c
main/logger_flatbuffer/: logger.fbs
main/logger_frame/: logger_frame.c  logger_frame.h  logger_hw.c  logger_hw.h
main/new_air_ref/: air_ref.h
main/peripherals/: i2c_devices.c  i2c_devices.h  led.c  led.h  spi_sd.c  spi_sd.h  uart.c  uart.h
main/rtcc/: mcp7940.c  mcp7940.h
main/serial_SATA_protocol/: serial_SATA_protocol.h
main/state_machines/: mc_configuration_polling.c  mc_configuration_polling.h  ms_ble.h  ms_rtc.c  ms_wifi.h
main/utility/: utility.c  utility.h
(+143 files in other folders)
